WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279584
Fix potential crash with InteractionRegion layers management
https://bugs.webkit.org/show_bug.cgi?id=279584
Summary
Fix potential crash with InteractionRegion layers management
Etienne
Reported
2024-09-12 02:03:55 PDT
Saw some debug assertions fail.
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2024-09-12 06:54:16 PDT
<
rdar://problem/134409589
>
Etienne
Comment 2
2024-09-12 06:55:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33549
EWS
Comment 3
2024-09-13 00:03:55 PDT
Committed
283602@main
(42916e1617b6): <
https://commits.webkit.org/283602@main
> Reviewed commits have been landed. Closing PR #33549 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug