Cherry-pick 283602@main (42916e1617b6). https://bugs.webkit.org/show_bug.cgi?id=279584

Fix potential crash with InteractionRegion layers management
    https://bugs.webkit.org/show_bug.cgi?id=279584
    <rdar://134409589>

    Reviewed by Mike Wyrzykowski.

    This patches addresses 2 sources of assertion failures which could lead
    to a crash:
    - duplicate Guard layers covering the same IntRect, breaking the
      assertion on the uniqueness of the `<IntRect, InteractionRegion::Type>`
      pairs.
    - layers reused twice, breaking the assertion on the `insertionPoint`
      always being <=the sublayers count.

    * Source/WebCore/rendering/EventRegion.h:
    * Source/WebCore/rendering/EventRegion.cpp:
    (WebCore::EventRegionContext::uniteInteractionRegions):
    (WebCore::EventRegionContext::removeSuperfluousInteractionRegions):
    Keep track of all guard rects, _including_ the inflated ones we add for
    small elements or complex shapes, to avoid duplicates.
    We still need to differentiate the two since only the inflated ones can
    get collided out in `removeSuperfluousInteractionRegions`.

    (WebCore::EventRegionContext::convertGuardContainersToInterationIfNeeded):
    Finish migrating the InteractionRegion rect tracking code to use
    `HashMap#add()` / `isNewEntry` to avoid extra hash lookups.

    * Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeInteractionRegionLayers.mm:
    (WebKit::updateLayersForInteractionRegions):
    Fix a bug where a layer was sometimes not removed from the reusable map
    after use.

    * LayoutTests/interaction-region/guard-crash-expected.txt: Added.
    * LayoutTests/interaction-region/guard-crash.html: Added.
    Introduce a test covering those assertion failures.
    (The expected layer tree would reveal the bug even in release mode.)

    Canonical link: https://commits.webkit.org/283602@main

Canonical link: https://commits.webkit.org/282416.139@webkitglib/2.46